<resources>
    <string name="app_name">Follow Me</string>
    <string name="action_settings">Settings</string>
    <string name="register_register_title">Register</string>
    <string name="register_username">Username</string>
    <string name="register_mail">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_sign_up_button">Sign up</string>
    <string name="app_firebase_url">https://arusoft-followme.firebaseio.com</string>
    </resources>
